form overflow fix

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -1076,6 +1076,7 @@ body {
 	.modal__container {
 		max-width: 90%;
 		max-height: 40vh; //fixed
+		overflow-y: auto;
 	}
 
 	.form {
